--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "crous-checker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/elkhayder/CROUS-watcher.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/elkhayder/CROUS-watcher/issues"
-  },
-  "homepage": "https://github.com/elkhayder/CROUS-watcher#readme",
-  "dependencies": {
-    "axios": "^0.27.2"
-  }
+   "name": "crous-checker",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node ./index.js"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/elkhayder/CROUS-watcher.git"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/elkhayder/CROUS-watcher/issues"
+   },
+   "homepage": "https://github.com/elkhayder/CROUS-watcher#readme",
+   "dependencies": {
+      "axios": "^0.27.2",
+      "node-cron": "^3.0.1",
+      "uuid": "^8.3.2"
+   }
 }
