--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
    "homepage": "https://github.com/elkhayder/CROUS-watcher#readme",
    "dependencies": {
       "axios": "^0.27.2",
+      "dotenv": "^16.3.1",
       "node-cron": "^3.0.1",
+      "telebot": "^1.4.1",
       "uuid": "^8.3.2"
    }
 }
