--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node ./index.js"
+      "start": "npm run build && node build/index.js",
+      "start:dev": "npx nodemon",
+      "build": "rimraf ./build && tsc"
    },
    "repository": {
       "type": "git",
@@ -21,8 +22,15 @@
    "dependencies": {
       "axios": "^0.27.2",
       "dotenv": "^16.3.1",
-      "node-cron": "^3.0.1",
       "telebot": "^1.4.1",
-      "uuid": "^8.3.2"
+      "typescript": "^5.2.2",
+      "uuid": "^9.0.0"
+   },
+   "devDependencies": {
+      "@types/node": "^20.5.6",
+      "@types/telebot": "^1.2.4",
+      "nodemon": "^3.0.1",
+      "rimraf": "^5.0.1",
+      "ts-node": "^10.9.1"
    }
 }
