--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
    "dependencies": {
       "axios": "^0.27.2",
       "dotenv": "^16.3.1",
+      "node-cron": "^3.0.2",
       "telebot": "^1.4.1",
       "typescript": "^5.2.2",
       "uuid": "^9.0.0"
    },
    "devDependencies": {
       "@types/node": "^20.5.6",
+      "@types/node-cron": "^3.0.8",
       "@types/telebot": "^1.2.4",
       "nodemon": "^3.0.1",
       "rimraf": "^5.0.1",
